--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
 <body>
     <section class="portfolio-page">
         <nav class="nav-flex">
-            <div class="logo">Albert's BlOG</div>
-            <!-- <div class="search">
-                <span><i class="fas fa-search"></i></span>
-                <input type="text" name="search" id="search">
-            </div> -->
+            <div>
+                <span class="logo">Albert's BlOG</span>
+                <a href="#" class="icon"><i class="fa fa-bars"></i></a> 
+            </div>
             <ul class="menu">
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Resume</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contact</a></li>
-                <a href="" class="icon"><i class="fa fa-bars"></i></a>
             </ul>
         </nav>
         <main class="portfolio">
@@ -54,15 +52,15 @@
             </ul>
         </main>
     </section>
-    <section class="container p-5">
-        <form action="" method="POST" class="form border border-info p-4 mx-auto w-50  bg-white">
+    <section class="container p-md-5 p-2">
+        <form action="" method="POST" class="form border border-info p-4 mx-auto w-75  bg-white">
             <h2 class="text-info">Contact</h2>
             <div class="row">
-                <div class="col">
+                <div class="col-12 col-md-6">
                     <label for="">Your name</label>
                     <input type="text" class="form-control" name="name">
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-6">
                     <label for="">Your mail</label>
                     <input type="text" class="form-control" name="mail">
                 </div>
