--- a/index.html
+++ b/index.html
@@ -10,20 +10,31 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <!-- nav -->
+    <nav class="nav-flex">
+        <div>
+            <span class="logo">Albert's BlOG</span>
+            <a href="#" class="icon"><i class="fa fa-bars"></i></a> 
+        </div>
+        <ul class="menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <section class="about">
+        <section class="intro container">
+            <section>
+                <h2>About</h2>
+                <p>Hey, I'm Albert Kao</p>
+                <p>Freelance Creative & Professional Graphics Designer</p>
+            </section>
+        </section>
+    </section>
     <section class="portfolio-page">
-        <nav class="nav-flex">
-            <div>
-                <span class="logo">Albert's BlOG</span>
-                <a href="#" class="icon"><i class="fa fa-bars"></i></a> 
-            </div>
-            <ul class="menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Resume</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </nav>
+        
         <main class="portfolio">
             <section class="intro container">
                 <section>
@@ -43,17 +54,17 @@
                 <li class="grid_1"><a href="./"></a></li>
                 <li class="b"><a href="#"></a></li>
                 <li class="grid_2"><a href="./chapter-7-9/dist/index.html"></a></li>
-                <!-- <li class="grid_3"></li>
+                <li class="grid_3"></li>
                 <li class="grid_4"></li>
                 <li class="grid_5"></li>
                 <li class="grid_6"></li>
                 <li class="grid_7"></li>
-                <li class="grid_8"></li> -->
+                <li class="grid_8"></li>
             </ul>
         </main>
     </section>
     <section class="container p-md-5 p-2">
-        <form action="" method="POST" class="form border border-info p-4 mx-auto w-75  bg-white">
+        <form action="" method="POST" class="form border border-info p-4 mx-auto w-75 bg-white">
             <h2 class="text-info">Contact</h2>
             <div class="row">
                 <div class="col-12 col-md-6">
