about page finish

--- a/index.html
+++ b/index.html
@@ -17,29 +17,35 @@
             <a href="#" class="icon"><i class="fa fa-bars"></i></a> 
         </div>
         <ul class="menu">
-            <li><a href="#">Home</a></li>
+            <!-- <li><a href="#">Home</a></li> -->
             <li><a href="#">About</a></li>
             <li><a href="#">Resume</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+
     <section class="about">
-        <section class="intro container">
-            <section>
-                <h2>About</h2>
-                <p>Hey, I'm Albert Kao</p>
-                <p>Freelance Creative & Professional Graphics Designer</p>
+        <section class="container intro">
+            <section class="intro_myself">
+                <h1>Hey, I'm Albert Kao</h1>
+                <h4>Website intern</h4>
+                <ul>
+                    <li><a href="mailto:mso729049@gmail.com"><i class="far fa-envelope"></i></a></li>
+                    <li><a href="https://github.com/albert199577"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/albert-kao-2037b9228/"><i class="fab fa-linkedin-in"></i></a></li>
+                </ul>
+            </section>
+            <section class="img">
+                <img src="./img/vote.png" alt="" width="200px" >
             </section>
         </section>
     </section>
     <section class="portfolio-page">
-        
         <main class="portfolio">
             <section class="intro container">
                 <section>
                     <h2>Portfolio</h2>
-                    <p>Hey, I'm Albert Kao</p>
                     <p>Freelance Creative & Professional Graphics Designer</p>
                 </section>
             </section>
