--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="nav-flex">
         <div>
             <span class="logo">Albert's BlOG</span>
-            <a href="#" class="icon"><i class="fa fa-bars"></i></a> 
+            <a class="icon"><i class="fa fa-bars"></i></a> 
         </div>
         <ul class="menu">
             <li><a href="#home">Home</a></li>
@@ -47,7 +47,7 @@
     <!-- about -->
     <section class="about-page"  id="about">
         <section class="about-title container">
-            <h1>about</h1>
+            <h1>About</h1>
         </section>
         <section class="about-content container">
             <section class="svg">
@@ -84,12 +84,12 @@
             <li class="grid_1"><a href="./"></a></li>
             <li class="b"><a href="#"></a></li>
             <li class="grid_2"><a href="./chapter-7-9/dist/index.html"></a></li>
-            <li class="grid_3"></li>
+            <!-- <li class="grid_3"></li>
             <li class="grid_4"></li>
             <li class="grid_5"></li>
             <li class="grid_6"></li>
             <li class="grid_7"></li>
-            <li class="grid_8"></li>
+            <li class="grid_8"></li> -->
         </ul>
     </section>
     <!-- contact -->
@@ -117,6 +117,7 @@
                     <label for="exampleFormControlTextarea1">message</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
+                <button class="btn btn-info mx-auto">Submit</button>
             </form>
         </main>
     </section>
