--- a/index.html
+++ b/index.html
@@ -121,7 +121,14 @@
             </form>
         </main>
     </section>
-
+    <footer class="footer">
+        <p>All right reserved Albert Kao @ 2022</p>
+        <ul>
+            <li><a href="mailto:mso729049@gmail.com"><i class="far fa-envelope"></i></a></li>
+            <li><a href="https://github.com/albert199577"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/albert-kao-2037b9228/"><i class="fab fa-linkedin-in"></i></a></li>
+        </ul>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
