add portfolio hover

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <!-- nav -->
     <nav class="nav-flex">
         <div>
-            <span class="logo">Albert's BlOG</span>
+            <span class="logo"><a href="#">Albert's BlOG</a></span>
             <a class="icon"><i class="fa fa-bars"></i></a> 
         </div>
         <ul class="menu">
-            <li><a href="#home">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -75,15 +75,42 @@
         </section>
         <section class="container list-menu">
             <ul class="protfolio-list-menu">
-                <li>ALL</li>
+                <li class="btn-color">ALL</li>
                 <li>WEB</li>
                 <li>DESIGN</li>
             </ul>
         </section>
         <ul class="container protfolio-list">
-            <li class="grid_1"><a href="./"></a></li>
-            <li class="b"><a href="#"></a></li>
-            <li class="grid_2"><a href="./chapter-7-9/dist/index.html"></a></li>
+            <li class="grid_1">
+                <a href="./"></a>
+                <div class="cover">
+                    <div class="cover-flex">
+                        <span><a href=""><i class="fas fa-search"></i></a></span>
+                        <span><a href=""><i class="fab fa-github"></i></a></span>
+                    </div>
+                    <h5>Guess Game</h5>
+                </div>
+            </li>
+            <li class="b">
+                <a href="#"></a>
+                <div class="cover">
+                    <div class="cover-flex">
+                        <span><a href=""><i class="fas fa-search"></i></a></span>
+                        <span><a href=""><i class="fab fa-github"></i></a></span>
+                    </div>
+                    <h5>Vote System</h5>
+                </div>
+            </li>
+            <li class="grid_2">
+                <a href="./chapter-7-9/dist/index.html"></a>
+                <div class="cover">
+                    <div class="cover-flex">
+                        <span><a href=""><i class="fas fa-search"></i></a></span>
+                        <span><a href=""><i class="fab fa-github"></i></a></span>
+                    </div>
+                    <h5>weather</h5>
+                </div>
+            </li>
             <!-- <li class="grid_3"></li>
             <li class="grid_4"></li>
             <li class="grid_5"></li>
@@ -93,7 +120,7 @@
         </ul>
     </section>
     <!-- contact -->
-    <section class="portfolio-contact" id="contact">
+    <section class="contact-page" id="contact">
         <main class="container">
             <h1>Contact</h1>
             <form action="" method="POST" class="form border border-info p-4 mx-auto my-5 w-md-50 w-xl-75">
