--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <!-- nav -->
     <nav class="nav-flex">
         <div>
-            <span class="logo">Albert's BlOG</span>
+            <span class="logo"><a href="#">Albert's BlOG</a></span>
             <a class="icon"><i class="fa fa-bars"></i></a> 
         </div>
         <ul class="menu">
@@ -26,10 +26,10 @@
         </ul>
     </nav>
     <!-- login -->
-    <section class="portfolio-contact" style="height: calc(100vh - 64px);display: flex;">
+    <section class="contact-page" style="height: calc(100vh - 64px);display: flex;">
         <main class="container">
             <h1>Login</h1>
-            <form action="" method="POST" class="form border border-info p-4 mx-auto my-5 w-md-50 w-xl-75">
+            <form action="" method="POST" class="form border border-info p-4 mx-auto my-5 w-md-50">
                 <div class="row my-3">
                     <div class="col">
                         <label for="">Account</label>
