--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a class="icon"><i class="fa fa-bars"></i></a> 
         </div>
         <ul class="menu">
-            <li><a href="#">Home</a></li>
+            <li><a href="#" class="nav-scroll-underline">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
