create experience page

--- a/index.html
+++ b/index.html
@@ -67,6 +67,40 @@
         
     </section>
 
+    <!-- experience -->
+    <section class="experience-page"  id="experience">
+        <section class="experience-title container">
+            <h1>experience</h1>
+        </section>
+        <section class="experience-content container">
+            <section class="education">
+                <ul>
+                    <li>
+                        <h3>education</h3>
+                    </li>
+                    <li>
+                        <p>2014 - 2019</p>
+                        <h5>wood and science design</h5>
+                        <h4>National Pingtung University of Science and Technology</h4>
+                    </li>
+                </ul>
+            </section>
+            <section class="work-experience">
+                <ul>
+                    <li>
+                        <h3>work-experience</h3>
+                    </li>
+                    <li>
+                        <p>2019 - 2021</p>
+                        <h5>Drafting engineer</h5>
+                        <h4>TAIWAN SHINRYO CO., LTD.</h4>
+                    </li>
+                </ul>
+            </section>
+        </section>
+        
+    </section>
+
     <!-- portfolio -->
     <section class="portfolio-page" id="portfolio">
         <section class="intro container">
